--- a/search.html
+++ b/search.html
@@ -166,7 +166,7 @@
            
           </div>
 
-<iframe src="https://like-button.zeit.de/like" style="width:100px;height:75px;border:none;"></iframe>
+<iframe src="None" style="width:100px;height:75px;border:none;"></iframe>
 
           <footer>
   
