--- a/javascript/guidelines.html
+++ b/javascript/guidelines.html
@@ -271,7 +271,7 @@
            
           </div>
 
-<iframe src="None" style="width:100px;height:75px;border:none;"></iframe>
+<iframe src="" style="width:100px;height:75px;border:none;"></iframe>
 
           <footer>
   
