--- a/sass/guidelines.html
+++ b/sass/guidelines.html
@@ -348,7 +348,7 @@
            
           </div>
 
-<iframe src="None" style="width:100px;height:75px;border:none;"></iframe>
+<iframe src="" style="width:100px;height:75px;border:none;"></iframe>
 
           <footer>
   
